# LLG-Code

./: Basic.cpp  CMakeCache.txt  CMakeLists.txt  DensityOfStates.cpp  DensityOfStates.h  Faddeeva.cpp  FieldPlots.cpp  LLG.h  Magnon  Makefile  README.md  cmake_install.cmake  constants.h  declarations.h  variables.h
include/: FieldPlots.h  Response.h
modified/: text
src/: LLG.cpp  Response.cpp  main.cpp
